# acide

./: .gitignore  README.md  io.github.gravures.acide.json  meson.build  mupdf.json  org.gnome.acide.json  python3-blosc.json  python3-clang.json  python3-furo.json  python3-gbulb.json  python3-myst_parser.json  python3-pymupdf.json  python3-scikit-build.json  python3-sphinx.json  python3-sphinxcontrib.apidoc.json
data/: io.github.gravures.acide.appdata.xml.in  io.github.gravures.acide.desktop.in  io.github.gravures.acide.gschema.xml  meson.build  org.gnome.acide.appdata.xml.in  org.gnome.acide.desktop.in  org.gnome.acide.gschema.xml
data/icons/: meson.build
docs/: meson.build
docs/sources/: conf.py
docs/sources/api/: acide.async.rst  acide.asyncop.rst  acide.graphic.rst  acide.main.rst  acide.measure.rst  acide.mprendering.rst  acide.rst  acide.tile.rst  acide.tiles.rst  acide.types.rst  acide.ui.duplex.rst  acide.ui.rst  modules.rst
po/: POTFILES  meson.build
src/: acide.gresource.xml  acide.in  main.py  meson.build  window.ui~
src/acide/: __init__.py  async.c  async.pxd  async.pyx  asyncop.c  asyncop.pxd  asyncop.pyx  doc.py  gbytes.pxd  graphic.c  graphic.pxi  graphic.py  graphic.pyx  main.py  measure.c  measure.pxd  measure.pxi  measure.pyx  mprendering.c  mprendering.pxd  mprendering.pyx  tile.c  tile.pxd  tile.pyx  tiles.c  tiles.pxd  tiles.pyx  types.c  types.pxd  types.pyx
src/acide/ui/: duplex.pyx  surface.py  window.py
src/gtk/: AcideUI.cmb  AcideWindow.ui  Menu.ui  acide-window.ui  acide.css  window.ui
src/ui/: surface.py  window.py
tests/unit/: test_TypedGrid.py
